# UmDiaProgramando

./: CHANGELOG.md  LICENSE  README.md
public/2021/junho/08/: README.md
public/2021/junho/09/: README.md
public/2021/junho/10/: README.md
public/2021/junho/11/: README.md
public/2021/junho/11/backend/: .gitignore  Cargo.toml  Rocket.toml  database.db
public/2021/junho/11/backend/src/: database.rs  errors.rs  jwt.rs  main.rs
public/2021/junho/11/backend/src/router/: auth.rs  mod.rs  users.rs
public/2021/junho/11/frontend/: Frontend.csproj  Frontend.sln  Program.cs  _Imports.razor
public/2021/junho/11/frontend/Models/: User.cs
public/2021/junho/11/frontend/Pages/: Index.razor  Index.razor.css  ListUsers.razor
public/2021/junho/11/frontend/Properties/: launchSettings.json
public/2021/junho/12/: README.md
public/2021/junho/13/: README.md
public/2021/junho/14/: README.md
public/2021/junho/15/: README.md
public/2021/junho/16/: README.md
public/2021/junho/17/: README.md
public/2021/junho/18/: README.md
public/2021/junho/19/: README.md
public/2021/junho/20/: README.md
public/2021/junho/20/workflows/: exemplo.yml
public/2021/junho/21/: README.md
public/2021/junho/21/benckmark/: Benckmark.sln  Program.cs
public/2021/junho/22/: README.md
